aumentamos un h3 y p en donde a h3 le dimos estilos de inclinaado y un font zise largo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <div class="main">
         <h3>Hablaremos de mis dos perritos</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse consequuntur, voluptatem ipsam eaque ratione vel quam recusandae consequatur culpa, assumenda aliquid mollitia at, temporibus minus dignissimos expedita harum? Nesciunt, voluptatum.</p>
+        <h3>Mascotas de raza mas bonitas</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas magnam quis quidem adipisci eveniet minus explicabo aliquam dolor in velit, tempora sapiente ipsam quas qui earum exercitationem autem cupiditate minima.</p>
     </div>
     
 </body>
