cambiamos los estilos en h2 ,h3 aumentamos un p he con gustos

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse consequuntur, voluptatem ipsam eaque ratione vel quam recusandae consequatur culpa, assumenda aliquid mollitia at, temporibus minus dignissimos expedita harum? Nesciunt, voluptatum.</p>
         <h3>Mascotas de raza mas bonitas</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas magnam quis quidem adipisci eveniet minus explicabo aliquam dolor in velit, tempora sapiente ipsam quas qui earum exercitationem autem cupiditate minima.</p>
+        <h3>Gustos de mis perro</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At sint laudantium provident dolorem ipsa animi molestias rem, repudiandae illum soluta exercitationem cum commodi, inventore quo ducimus, nihil eius libero fugit.</p>
     </div>
     
 </body>
