cambiamos el el encabesado a aprender de git y cambiamos el bacgraound

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="main">
         <div class="encabezado">
-            Este es mi encabezado bonita
+            APRENDER GIT ES MUS FACIL SI SE PRACTICA.
         </div>
         <h3>Hablaremos de mis dos perritos</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse consequuntur, voluptatem ipsam eaque ratione vel quam recusandae consequatur culpa, assumenda aliquid mollitia at, temporibus minus dignissimos expedita harum? Nesciunt, voluptatum.</p>
