--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aprendiendo github</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <div class="main">
         <div class="encabezado">
-            APRENDER GIT ES MUS FACIL SI SE PRACTICA.
+            <h1>YA APRENDI GIT Y GITHUB YA SOY UN PRO EN ESTE AMBITO.</h1>
         </div>
         <h3>Hablaremos de mis dos perritos</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse consequuntur, voluptatem ipsam eaque ratione vel quam recusandae consequatur culpa, assumenda aliquid mollitia at, temporibus minus dignissimos expedita harum? Nesciunt, voluptatum.</p>
