agregamos imagen para header y tambiem agregamos seccion header y la vez alineamos con flexbox

--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+    <header class="header">
+        <figure>
+            <img src="img/logo100.png" alt="">
+        </figure>
+        <nav class="menu"> 
+            <ul>
+                <li><a href="#" class="link">Proyectos</a></li>
+                <li><a href="#" class="link">Heramientas</a></li>
+                <li><a href="#" class="link">Contactame</a></li>
+                <li><a href="#" class="link">Inicio</a></li>
+            </ul>
+        </nav>
+
+    </header>
     <div class="main">
         <div class="encabezado">
             <h1>YA APRENDI GIT Y GITHUB YA SOY UN PRO EN ESTE AMBITO.</h1>
