agregamos figure en main con un imagen de github

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <div class="encabezado">
             <h1>YA APRENDI GIT Y GITHUB YA SOY UN PRO EN ESTE AMBITO.</h1>
         </div>
+        <figure class="container-main-img">
+            <img src="img/github.png" alt="foto github">
+        </figure>
         <h3>Hablaremos de mis dos perritos</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse consequuntur, voluptatem ipsam eaque ratione vel quam recusandae consequatur culpa, assumenda aliquid mollitia at, temporibus minus dignissimos expedita harum? Nesciunt, voluptatum.</p>
         <h3>Mascotas de raza mas bonitas</h3>
