se añadio seccion footer con una etiqueta p y background morado

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas magnam quis quidem adipisci eveniet minus explicabo aliquam dolor in velit, tempora sapiente ipsam quas qui earum exercitationem autem cupiditate minima.</p>
         <h3>Gustos de mis perro</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At sint laudantium provident dolorem ipsa animi molestias rem, repudiandae illum soluta exercitationem cum commodi, inventore quo ducimus, nihil eius libero fugit.</p>
+
     </div>
+    <footer class="footer">
+        <p>Desarrollado por equipo github</p>
+
+    </footer>
     
 </body>
 </html>
