haciendo cambios en header y en la cabecera de index con h2

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div class="main">
         <div class="encabezado">
             <h1>YA APRENDI GIT Y GITHUB YA SOY UN PRO EN ESTE AMBITO.</h1>
+            <h2>generando errores</h2>
         </div>
         <figure class="container-main-img">
             <img src="img/github.png" alt="foto github">
