hicimos cambios en header y he en encabezado y aumentamos un h3 y color lawgreen

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div class="main">
         <div class="encabezado">
             <h1>YA APRENDI GIT Y GITHUB YA SOY UN PRO EN ESTE AMBITO.</h1>
+            <h2>git esta genial para aprender</h2>
         </div>
         <figure class="container-main-img">
             <img src="img/github.png" alt="foto github">
@@ -35,6 +36,7 @@
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas magnam quis quidem adipisci eveniet minus explicabo aliquam dolor in velit, tempora sapiente ipsam quas qui earum exercitationem autem cupiditate minima.</p>
         <h3>Gustos de mis perro</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At sint laudantium provident dolorem ipsa animi molestias rem, repudiandae illum soluta exercitationem cum commodi, inventore quo ducimus, nihil eius libero fugit.</p>
+        <h3>estamos aprendiendo generar errores en dos areas</h3>
 
     </div>
     <footer class="footer">
