--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="encabezado">
             <h1>YA APRENDI GIT Y GITHUB YA SOY UN PRO EN ESTE AMBITO.</h1>
             <h2>git esta genial para aprender</h2>
+            <h2>github es super bueno para desarrollar en equipo</h2>
         </div>
         <figure class="container-main-img">
             <img src="img/github.png" alt="foto github">
@@ -37,6 +38,7 @@
         <h3>Gustos de mis perro</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At sint laudantium provident dolorem ipsa animi molestias rem, repudiandae illum soluta exercitationem cum commodi, inventore quo ducimus, nihil eius libero fugit.</p>
         <h3>estamos aprendiendo generar errores en dos areas</h3>
+        <p>Estoy aprendiendo github de una manera muy buena y censilla con el profesor David Torres de colombia que es paisano del Pablo Escobar el grande en el mundo del narcotraficodel mundo</p>
 
     </div>
     <footer class="footer">
