Hice cambios en el titulo del documento y en el titulo de encabezado
hice cambio en titulo del documento de FORTALECIENDO GITHUB a APRENDIENDO GITHUB y en el titulo del encabezado puse ya aprendí las llaves privadas y publicas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fortaliciendo github</title>
+    <title>Aprendiendo github</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
@@ -24,7 +24,7 @@
     </header>
     <div class="main">
         <div class="encabezado">
-            <h1>YA APRENDI GIT Y GITHUB YA SOY UN PRO EN ESTE AMBITO.</h1>
+            <h1>YA ENTIENDO PERFECTAMENTE LAS LLAVES PUBLICAS Y PRIVADAS EN GITHUB</h1>
             <h2>git esta genial para aprender</h2>
             <h2>github es super bueno para desarrollar en equipo</h2>
         </div>
