cambio de texto loren por texto real de perritos

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="img/github.png" alt="foto github">
         </figure>
         <h3>Hablaremos de mis dos perritos</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse consequuntur, voluptatem ipsam eaque ratione vel quam recusandae consequatur culpa, assumenda aliquid mollitia at, temporibus minus dignissimos expedita harum? Nesciunt, voluptatum.</p>
+        <p>Sé que nadie nunca sabrá quererme así, sin límites, sin fronteras, haga lo que haga, sin pedir, sin esperar nada para sí. Nadie podrá quererme, como ella me quiere a mí.</p>
         <h3>Mascotas de raza mas bonitas</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas magnam quis quidem adipisci eveniet minus explicabo aliquam dolor in velit, tempora sapiente ipsam quas qui earum exercitationem autem cupiditate minima.</p>
         <h3>Gustos de mis perro</h3>
