hice el cambio el contenido del h1

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
     </header>
     <div class="main">
         <div class="encabezado">
-            <h1>YA ENTIENDO PERFECTAMENTE LAS LLAVES PUBLICAS Y PRIVADAS EN GITHUB</h1>
-            <h2>git esta genial para aprender</h2>
-            <h2>github es super bueno para desarrollar en equipo</h2>
+            <h1>probando mis cambios en github</h1>
         </div>
         <figure class="container-main-img">
             <img src="img/github.png" alt="foto github">
